gccida/g2/nonoverlapping_memrefs_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2371:10: error: conflicting types for 'nonoverlapping_memrefs_p'
__int64  nonoverlapping_memrefs_p( __int64 a1, __int64 a2) 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:109:12: note: previous declaration is here
static int nonoverlapping_memrefs_p     PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2390:4: error: expected ';' after expression
rtx v21; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2390:5: error: use of undeclared identifier 'v21'
rtx v21; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2394:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2394:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2396:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2396:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2402:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2402:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2403:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2403:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2416:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2416:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2420:4: error: expected ';' after expression
rtx v52; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2420:5: error: use of undeclared identifier 'v52'
rtx v52; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2423:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2423:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2428:4: error: expected ';' after expression
rtx v60; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/alias.c:2428:5: error: use of undeclared identifier 'v60'
rtx v60; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/nonoverlapping_memrefs_p/src/obj/alias.o] Error 1
